--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,28 @@
 			<artifactId>freemarker</artifactId>
 			<version>2.3.23</version>
 		</dependency>
+		<!-- 分页 pagehelper -->
+		<dependency>
+		  <groupId>com.github.pagehelper</groupId>
+		  <artifactId>pagehelper</artifactId>
+		  <version>5.1.2</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.github.jsqlparser</groupId>
+		  <artifactId>jsqlparser</artifactId>
+		  <version>0.9.2</version>
+		</dependency>
+		<!-- 工具类 -->
+		<dependency>
+		  <groupId>commons-lang</groupId>
+		  <artifactId>commons-lang</artifactId>
+		  <version>2.5</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.google.guava</groupId>
+		  <artifactId>guava</artifactId>
+		  <version>15.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
