--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 #mysql
 mysql.driver=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://localhost:3306/working?useUnicode=true&characterEncoding=utf8&useSSL=false
+mysql.url=jdbc:mysql://localhost/working?useUnicode=true&characterEncoding=utf8&useSSL=false
 mysql.uid=root
 mysql.password=123456
 
